--- a/index.html
+++ b/index.html
@@ -43,18 +43,18 @@
         </section>
 
         <section class="photo-grid container container_size_xl">
-          <div class="photo-grid__item photo-grid__item_picture_train-window"></div>
-          <div class="photo-grid__item photo-grid__item_picture_mountains"></div>
-          <div class="photo-grid__item photo-grid__item_picture_dog"></div>
-          <div class="photo-grid__item photo-grid__item_picture_forest"></div>
-          <div class="photo-grid__item photo-grid__item_picture_car-ice"></div>
-          <div class="photo-grid__item photo-grid__item_picture_beach"></div>
-          <div class="photo-grid__item photo-grid__item_picture_rocks"></div>
-          <div class="photo-grid__item photo-grid__item_picture_sign"></div>
-          <div class="photo-grid__item photo-grid__item_picture_hills"></div>
-          <div class="photo-grid__item photo-grid__item_picture_foothills"></div>
-          <div class="photo-grid__item photo-grid__item_picture_beachrock"></div>
-          <div class="photo-grid__item photo-grid__item_picture_fog"></div>
+          <img class="photo-grid__item" src="./images/grid-train-window.png" alt="Окно поезда">
+          <img class="photo-grid__item" src="./images/grid-mountains.png" alt="Горы">
+          <img class="photo-grid__item" src="./images/grid-dog.png" alt="Собака">
+          <img class="photo-grid__item" src="./images/grid-forest.png" alt="Лест">
+          <img class="photo-grid__item" src="./images/grid-car-ice.png" alt="Вид из автомобиля">
+          <img class="photo-grid__item" src="./images/grid-beach.png" alt="Пляж">
+          <img class="photo-grid__item" src="./images/grid-rocks.png" alt="Скалы">
+          <img class="photo-grid__item" src="./images/grid-sign.png" alt="Знак">
+          <img class="photo-grid__item" src="./images/grid-hills.png" alt="Холмы">
+          <img class="photo-grid__item" src="./images/grid-foothills.png" alt="Подножье горы">
+          <img class="photo-grid__item" src="./images/grid-beachrock.png" alt="Прибрежные скалы">
+          <img class="photo-grid__item" src="./images/grid-fog.png" alt="Туман">
         </section>
 
         <section class="places container">
@@ -64,7 +64,7 @@
               <p class="place__url-heading">URL</p>
               <a class="place__link" href="http://park-kosa.ru">park-kosa.ru</a>
             </div>
-            <div class="place__image place__image_picture_kosa"></div>
+            <img class="place__image" src="./images/place-kosa.png" alt="Куршская коса">
             <div class="place__paragraphs">
               <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных 
                 горизонта &mdash; спокойного Куршского залива с одной 
@@ -85,7 +85,7 @@
               <p class="place__url-heading">URL</p>
               <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
             </div>
-            <div class="place__image place__image_picture_kolskii"></div>
+            <img class="place__image" src="./images/place-kolskii.png" alt="Кольский полуостров">
             <div class="place__paragraphs">
               <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг &mdash; 
                 тайга, а на север &mdash; Ледовитый океан, прикидывающийся Баренцевым морем.</p>
@@ -104,7 +104,7 @@
               <p class="place__url-heading">URL</p>
               <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
             </div>
-            <div class="place__image place__image_picture_altai"></div>
+            <img class="place__image" src="./images/place-altai.png" alt="Алтай">
             <div class="place__paragraphs">
               <p class="place__paragraph">Алтай &mdash; одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль хребта, 
                 вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться 
@@ -123,7 +123,7 @@
               <p class="place__url-heading">URL</p>
               <a class="place__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
             </div>
-            <div class="place__image place__image_picture_baikal"></div>
+            <img class="place__image" src="./images/place-baikal.png" alt="Байкал">
             <div class="place__paragraphs">
               <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, 
                 что это самый большой источник пресной воды и одно из красивейших мест в России.
@@ -141,7 +141,7 @@
               <p class="place__url-heading">URL</p>
               <a class="place__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
             </div>
-            <div class="place__image place__image_picture_karelia"></div>
+            <img class="place__image" src="./images/place-karelia.png" alt="Карелия">
               <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт 
                 западнее Водлозера. Зато здесь она вымахивает на 30 метров &mdash;   леса карельских национальных парков из-за непроходимых болот 
                 никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал 
@@ -150,13 +150,14 @@
               </p>            
           </div>
         </section>
-
-        <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
-          <section class="cover container container_size_xl">
-            <h2 class="cover__title">До Байкала &#171;на собаках&#187;</h2>
-            <p class="cover__subtitle">По мотивам учебной темы о Транссибе &mdash; путешествие от столицы до Байкала на электричках.</p>
-          </section>
-        </a>
+        <section class="cover container container_size_xl">
+          <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
+            <div class="cover__background">
+              <h2 class="cover__title">До Байкала &#171;на собаках&#187;</h2>
+              <p class="cover__subtitle">По мотивам учебной темы о Транссибе &mdash; путешествие от столицы до Байкала на электричках.</p>
+            </div>
+          </a>
+        </section>
       </main>
 
       <footer class="footer container container_size_xl">
