--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </ul>
         </section>
 
-        <section class="photo-grid container container_size_xl">
+        <section class="photo-grid container container_size_xl" aria-label="Галерея">
           <img class="photo-grid__item" src="./images/grid-train-window.png" alt="Окно поезда">
           <img class="photo-grid__item" src="./images/grid-mountains.png" alt="Горы">
           <img class="photo-grid__item" src="./images/grid-dog.png" alt="Собака">
