коррекция после валидатора

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <img class="photo-grid__item" src="./images/grid-fog.png" alt="Туман">
         </section>
 
-        <section class="places container">
+        <section class="places container" aria-label="Места для путешествия">
           <article class="place">
             <h2 class="place__title">Куршская коса</h2>
             <div class="place__website">
