--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             </div>
             <img class="place__image" src="./images/place-karelia.png" alt="Карелия">
               <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт 
-                западнее Водлозера. Зато здесь она вымахивает на 30 метров &mdash;   леса карельских национальных парков из-за непроходимых болот 
+                западнее Водлозера. Зато здесь она вымахивает на 30 метров &mdash; леса карельских национальных парков из-за непроходимых болот 
                 никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал 
                 его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья в паре метров от земли 
                 помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.
@@ -155,7 +155,7 @@
 
         <section class="cover container container_size_xl">
           <a class="cover__link cover__background" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
-            <h2 class="cover__title">До Байкала &#171;на собаках&#187;</h2>
+            <h2 class="cover__title">До Байкала &#171;на&nbsp;собаках&#187;</h2>
             <p class="cover__subtitle">По мотивам учебной темы о Транссибе &mdash; путешествие от столицы до Байкала на электричках.</p>
           </a>
         </section>
